# omvarldsbevakning-system

./: .gitignore  .ruff.toml  log.txt  main.py  promt_plan.md  pyproject.toml  spec.md  test.txt  tree.txt
accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
clustering/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
clustering/migrations/: 0001_initial.py
config/: permissions.py  settings.py  urls.py  views.py
core/: urls.py  views.py
observations/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
observations/management/commands/: populate_observations.py
observations/migrations/: 0001_initial.py
reporting/: urls.py  views.py
reporting/templates/reporting/: report.html
scan_periods/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
scan_periods/migrations/: 0001_initial.py
static/: clustering.js  dashboard.js  login.js  style.css
templates/: clustering.html  dashboard.html  login.html
